<resources>

    <string name="app_name">Список покупок</string>
    <string name="add_product">+</string>
    <string name="field_product">Завдання</string>
    <string name="set_name">Новий список</string>
    <string name="create_new_list">Створити</string>
    <string name="btn_cancel">Відміна</string>

    <string name="use_pink">Рожевий</string>
    <string name="use_green">Зелений</string>
    <string name="use_blue">Синій</string>
    <string name="use_yellow">Жовтий</string>
    <string name="use_grey">Сірий</string>

    <string name="list_delete">Видалити</string>
    <string name="list_share">Поділитися</string>

    <string name="prod_delete">Видалити</string>
    <string name="prod_edit">Редагувати</string>

    <string name="btn_edit_ok">Готово</string>
    <string name="btn_edit_cancel">Відміна</string>

    <string name="privacy_full_eng"><![CDATA[
    <p align="justify"><b>Welcome to the <a
    href="https://play.google.com/store/apps/details?id=devtolife.shoppinglist">“Shopping
    List”</a> Privacy Policy</b><br>
	<br>
    Last modified: December 03, 2017.<br>
	<br>
    We do not collect any confidential information.<br>
	<br>
	You can use “Shopping List” at your own discretion to communicate with other people or to create new content.<br>
	<br>
	The “Shopping List” let you share information with others.
	Remember that when you share information publicly, it may be indexable by search engines.<br>
	<br>
    Our Privacy Policy may change from time to time.
    We will not reduce your rights under this Privacy Policy without your explicit consent.
    We will post any privacy policy changes on this
    page by this link:</p>
    <a href="https://vmarch.github.io/privacy_policy.html">https://vmarch.github.io/privacy_policy.html</a></b><br>
    And in this application while update.
    ]]></string>

    <string name="privacy_full_ukr"><![CDATA[
    <p align="justify"><b>Ласкаво просимо в Політику конфіденційності мобільного додатка <a
    href="https://play.google.com/store/apps/details?id=devtolife.shoppinglist">“Список
    Покупок”</a></b><br>
    <br>
	Остання зміна політики конфіденційності: 03 грудня 2017 р.<br>
	<br>
	Ми не збираємо жодної конфіденційної інформації.<br>
	<br>
	Ви можете використовувати додаток на власний розсуд, в тому числі для спілкування з іншими людьми або для створення нового вмісту.<br>
	<br>
	“Список Покупок” дозволяє поділитися інформацією з іншими. Пам`ятайте, що коли ви обмінюєтеся інформацією публічно, це може індексуватися пошуковими системами.<br>
	<br>
	Наша Політика конфіденційності може змінюватися час від часу.
	Ми не зменшимо ваші права згідно з цією Політикою конфіденційності без вашої явної згоди.
	Ми публікуємо всі зміни політики конфіденційності на сторінці за цим посиланням:</p>
	<a href="https://vmarch.github.io/privacy_policy.html">https://vmarch.github.io/privacy_policy.html</a></b><br>
    А також у цій програмі при оновленні.


    ]]></string>

    <string name="privacy_full_rus"><![CDATA[
    <p align="justify"><b>Добро пожаловать в Политику конфиденциальности мобильного приложения <a
    href="https://play.google.com/store/apps/details?id=devtolife.shoppinglist">“Список
    Покупок”</a></b><br>
	<br>
    Последнее изменение политики конфиденциальности: 03 декабря 2017.<br>
	<br>
    Мы не собираем никакой конфиденциальной информации.<br>
    <br>
    Вы можете использовать приложение на ваше усмотрение.
    В том числе для общения с другими людьми или для создания нового содержания.<br>
    <br>
    “Список Покупок” позволяет поделиться информацией с другими.
    Помните, что когда вы обмениваетесь информацией публично, это может индексироваться поисковыми системами. <br>
    <br>
    Наша Политика конфиденциальности может меняться время от времени.
    Мы не уменьшим ваши права в соответствии с настоящей Политикой конфиденциальности
    без вашего явного согласия.
    Мы публикуем все изменения политики конфиденциальности на странице по этой ссылке:</p>
    <a href="https://vmarch.github.io/privacy_policy.html">https://vmarch.github.io/privacy_policy.html</a></b><br>
    А так же в приложенни при обновлении.
    ]]></string>

    <string name="action_settings">Налаштування</string>
    <string name="action_theme">Тема</string>
    <string name="action_star">Оцініть додаток</string>
    <string name="open_privacy">Переглянути: "https://vmarch.github.io/privacy_policy.html"</string>
    <string name="action_privacy">Правила</string>
    <string name="action_about_app">Про програму</string>

    <string name="about_row_name">Name: ShoppingList</string>
    <string name="about_row_autor">Developer: V.March</string>
    <string name="about_row_company">Company: dev_to_life</string>
    <string name="about_row_version">Version of APP: 4.4</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="header_caption">(Закон Паттона)</string>
    <string name="header_aphorism">Хороший план сегодня лучше безупречного завтра.</string>

    <string name="string_menu_eng">ENG</string>
    <string name="string_menu_ukr">UKR</string>
    <string name="string_menu_rus">RUS</string>

</resources>
