<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_theme"
                android:icon="@drawable/ic_color_lens_black_24dp"
                android:title="@string/action_theme" />
            <item
                android:id="@+id/action_rate"
                android:icon="@drawable/ic_rate_24dp"
                android:title="@string/action_star" />

            <item
                android:id="@+id/action_policy"
                android:icon="@drawable/ic_privacy_policy_24"
                android:title="@string/action_privacy" />

            <item
                android:id="@+id/action_about_app"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/action_about_app" />

        </menu>
    </item>
</menu>