<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="devtolife.shoppinglist.menu_action.SettingAboutAppActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_setting_about"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        tools:context="devtolife.shoppinglist.menu_action.SettingAboutAppActivity">

        <TextView
            android:id="@+id/name_of_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical|center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorOff"
            android:text="@string/about_row_name" />

        <TextView
            android:id="@+id/text_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left|center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorOff"
            android:text="@string/about_row_company" />

        <TextView
            android:id="@+id/text_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical|center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorOff"
            android:text="@string/about_row_autor" />

        <TextView
            android:id="@+id/version_of_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorOff"
            android:text="@string/about_row_version" />

    </LinearLayout>

</LinearLayout>

