<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context="devtolife.shoppinglist.EditItem">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_edit_item"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/edit_of_item"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:gravity="center_vertical"
            android:hint="@string/set_name"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLength="22"
            tools:text="Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <!--TODO normal buttons-->

        <Button
            android:id="@+id/cancel_new_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:text="@string/btn_cancel"
            android:textSize="14dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/ok_new_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:textSize="14dp"
            android:layout_marginStart="8dp"
            android:text="@string/btn_edit_ok" />

    </LinearLayout>

</LinearLayout>

