<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="devtolife.shoppinglist.CreateTable">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_create_table"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="horizontal"
        tools:context="devtolife.shoppinglist.CreateTable">

        <EditText
            android:id="@+id/add_new_table"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:hint="@string/set_name"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLength="22"
            tools:ignore="NestedWeights"
            tools:text="Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_create_list"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="top|center_vertical|center_horizontal|center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshapeadd"
            android:text="@string/create_new_list"
            android:textSize="16sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="top|center_vertical|center_horizontal|center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshapedel"
            android:text="@string/btn_cancel"
            android:textColor="#3b0505"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>

